# map-inject

./: .gitignore  .gitmodules  AGENT.md  CLAUDE.md  lalala.w3m
docs/: html.rar
docs/analysis/: YDWE-LuaEngine注入与双虚拟机架构分析.html  YDWE-LuaEngine注入与双虚拟机架构分析.md
docs/architecture/: ADDRESSES.md  ARCHITECTURE.md
docs/html/: architecture.html  build-and-test.html  index.html  internals.html  modules.html  source-index.html  tooling.html
docs/planning/: JASS-LUA-BRIDGE.md  ROADMAP.md  YDWE-CORE-EXTRACTION-DESIGN.md
docs/reference/: REFERENCES.md
map/: demo.w3x  war3map.lua
map/lib/: util.lua
map/tests/: test_suite.lua
reference/: UjAPI逆向分析.html  japi-base.w3x
reference/builtin-japi/: (attributes)  (listfile)  callback  original.w3x  war3map.j  war3map.wtg  war3map.wts  war3mapMap.blp  wenhao_plugin逆向分析报告.html
reference/japi-base/: (attributes)  (listfile)  (signature)  war3map.imp  war3map.j  war3map.w3a  war3map.w3i  war3map.w3u  war3map.wct  war3mapSkin.txt
reference/vanilla_map/: (attributes)  war3map.doo  war3map.j  war3map.mmp  war3map.shd  war3map.w3e  war3map.w3i  war3map.wpm  war3map.wts  war3mapMap.blp  war3mapUnits.doo
src/: CMakeLists.txt  build.bat
src/src/: debug_log.h  stubs.cpp
src/src/base/exception/: exception.h
src/src/base/util/: string_view.h
src/src/bee/: config.h  registry.h
src/src/bee/lua/: binding.h
src/src/bee/utility/: path_helper.h  unicode_win.h
src/src/d3d9/: CDirect3D9.cpp  CDirect3D9.h  CDirect3DDevice9.cpp  CDirect3DDevice9.h  CMakeLists.txt  api.cpp  api.h  d3d9_proxy.h  dllmain.cpp  renderer.cpp  renderer.h
src/src/extensions/: custom_natives.cpp  dllmain.cpp
src/src/extensions/ex_natives/: AbilityState.cpp  CodeRunLogs.cpp  DisplayChat.cpp  Effect.cpp  EventDamageData.cpp  GameInfo.cpp  Initialize.cpp  ItemState.cpp  StringPool.h  UnitState.cpp
src/src/fmt/: format.h
src/src/lua_engine/lua_engine/: bridge_dispatch.cpp  bridge_dispatch.h  fix_baselib.cpp  fix_baselib.h  libs_common.cpp  libs_debug.cpp  libs_message.cpp  libs_runtime.cpp  libs_sleep.cpp  libs_slk.cpp  libs_storm.cpp  lua_loader.cpp  lua_loader.h  open_lua_engine.cpp
src/src/slk/: ObjectManager.cpp  storm_adapter.hpp
src/src/slk/port/: config.h
src/src/slk/reader/: MetaReader.cpp  SlkReader.cpp
src/src/slk/table/: BaseTable.hpp
src/src/slk/utility/: object_id.h
src/src/yd_core/warcraft3/jass/: hook.cpp  hook.h  nf_register.cpp  nf_register.h
tools/: _fix_hook.py  _fix_hook2.py  callback  config.example.ps1  deploy.ps1  pack.ps1  patch_war3map_j.py
tools/core/: 03-APITypecast.j  04-APIMemory.j  05-APIMemoryCalls.j  06-APIMemoryBitwise.j  07-APIMemoryString.j  08-APIMemoryKernel.j  10-APIMemoryStormDLL.j
